completed tailwind exercise initial example

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-    <meta />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie-edge" />
     <title>Document</title>
     <link rel="stylesheet" href="/build/tailwind.css" />
     <body class="bg-gray-100">
@@ -12,8 +14,20 @@
           alt="Woman Workcationing"
         />
         <h1 class="mt-6 text-2xl font-bold text-gray-900 leading-tight">
-          You can work anywhere. Take advantage of it
+          You can work anywhere.
+          <span class="text-indigo-500">Take advantage of it.</span>
         </h1>
+        <p class="mt-2 text-gray-600">
+          Workcation helps you find work-friendly rentals in beautiful locations
+          so you can enjoy some nice weather even when you're not on vacation.
+        </p>
+        <div class="mt-4">
+          <a
+            href="#"
+            class="inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold text-sm"
+            >Book your escape</a
+          >
+        </div>
       </div>
     </body>
   </head>
