--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="ie-edge" />
     <title>Document</title>
     <link rel="stylesheet" href="/build/tailwind.css" />
-    <body class="bg-gray-100">
-      <div class="px-8 py-12">
-        <img class="h-10" src="/img/logo.svg" alt="Workcation" />
-        <img
-          class="mt-6 rounded-lg shadow"
-          src="/img/beach-work.jpg"
-          alt="Woman Workcationing"
-        />
-        <h1 class="mt-6 text-2xl font-bold text-gray-900 leading-tight">
-          You can work anywhere.
-          <span class="text-indigo-500">Take advantage of it.</span>
-        </h1>
-        <p class="mt-2 text-gray-600">
-          Workcation helps you find work-friendly rentals in beautiful locations
-          so you can enjoy some nice weather even when you're not on vacation.
-        </p>
-        <div class="mt-4">
-          <a
-            href="#"
-            class="inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold text-sm"
-            >Book your escape</a
-          >
+    <body class="bg-gray-300">
+      <div class="bg-gray-100 flex">
+        <div
+          class="px-8 py-12 max-w-md mx-auto sm:max-w-xl lg:max-w-full lg:w-1/2 lg:py-24 lg:px-12"
+        >
+          <div class="xl:max-w-lg xl:ml-auto">
+            <img class="h-10" src="/img/logo.svg" alt="Workcation" />
+            <img
+              class="mt-8 rounded-lg shadow sm:h-64 sm:w-full sm:object-cover sm:object-center lg:hidden"
+              src="/img/beach-work.jpg"
+              alt="Woman Workcationing"
+            />
+            <h1
+              class="mt-6 text-2xl font-bold text-gray-900 leading-tight sm:text-4xl sm:mt-8 xl:text-4xl"
+            >
+              You can work anywhere.
+              <div>
+                <span class="text-indigo-500">Take advantage of it.</span>
+              </div>
+              <p class="mt-2 text-gray-600 sm:text-xl sm:mt-4">
+                Workcation helps you find work-friendly rentals in beautiful
+                locations so you can enjoy some nice weather even when you're
+                not on vacation.
+              </p>
+            </h1>
+            <div class="mt-4 sm:mt-6">
+              <a
+                href="#"
+                class="inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold sm:text-base"
+                >Book your escape</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="hidden lg:block lg:w-1/2 lg:relative ">
+          <img
+            class="absolute inset-0 h-full w-full object-center object-cover"
+            src="/img/beach-work.jpg"
+            alt="Woman workcationing"
+          />
         </div>
       </div>
     </body>
