Composing Utilities with @apply exercise

--- a/public/index.html
+++ b/public/index.html
@@ -24,18 +24,14 @@
               <div>
                 <span class="text-indigo-500">Take advantage of it.</span>
               </div>
-              <p class="mt-2 text-gray-600 sm:text-xl sm:mt-4">
+              <p class="mt-2 text-gray-600 sm:text-xl sm:mt-4 font-light">
                 Workcation helps you find work-friendly rentals in beautiful
                 locations so you can enjoy some nice weather even when you're
                 not on vacation.
               </p>
             </h1>
             <div class="mt-4 sm:mt-6">
-              <a
-                href="#"
-                class="inline-block bg-indigo-500 text-white px-5 py-3 rounded-lg shadow-lg uppercase tracking-wider font-semibold sm:text-base"
-                >Book your escape</a
-              >
+              <a href="#" class="btn">Book your escape</a>
             </div>
           </div>
         </div>
